Added portuguese and other small changes

--- a/index-pt.html
+++ b/index-pt.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
     <title>Brandidly - Agência Criativa</title>
-    <meta
+    
+    <meta property="og:site_name" content="BRANDIDLY - Agência de Marketing">
+    <meta property="og:title" content="Brandidly Serviços - Agência de Marketing Digital">
+    <meta property="og:description" content="Nova agência Digital sediada em Maputo, Moçambique. Somos movidos pela paixão de trazer a transformação digital ao mercado cada vez mais crescente de Moçambique. Soluções digitais que podem potencialmente fazer com que as empresas reimaginem a forma como as empresas conseguem utilizar plataformas digitais para aumentar as receitas.">
+
+    <meta property="og:url" content="https://www.brandid.ly/index-pt.html">
+    <meta name="description" content="Nova agência Digital sediada em Maputo, Moçambique. Somos movidos pela paixão de trazer a transformação digital ao mercado cada vez mais crescente de Moçambique. Soluções digitais que podem potencialmente fazer com que as empresas reimaginem a forma como as empresas conseguem utilizar plataformas digitais para aumentar as receitas.">
+
+    <meta name="keywords" content="brandidly, agência de marketing moçambique,agências em maputo, empresa de marketing moçambique, marketing digital moçambique, marketing digital maputo, marketing online, publicidade online, marketing social media, Web Design, desenvolvimento de websites">
+
+
     <!-- Favicon -->
     <link rel="icon" href="creative-studio/img/favicon.png">
     <!-- Bundle -->
@@ -73,7 +83,7 @@
                     <li class="nav-item"> <a href="index-pt.html" class="nav-link">Pt</a></li>
                 </ul>
             </div>
-            <a href="https://wa.me/00258849276408" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 84 927 6408</a>
+            <a href="https://wa.me/00258865796682" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 86 579 6682</a>
             <!-- side menu open button --> 
             <a class="menu_bars d-inline-block menu-bars-setting animated-wrap sidemenu_toggle d-block d-lg-none">
                 <div class="menu-lines animated-element">
@@ -122,9 +132,9 @@
 
             <div class="side-footer text-white w-100">
                 <ul class="social-icons-simple">
-                    <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-facebook-f color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="https://facebook.com/brandidlymoz" target="_blank"><i class="fab fa-facebook-f color-white"></i> </a> </li>
                     <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-instagram color-white"></i> </a> </li>
-                    <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-twitter color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="https://www.instagram.com/brandid.ly/" target="_blank"><i class="fab fa-twitter color-white"></i> </a> </li>
                 </ul>
                 <p class="text-white">&copy; 2020 Brandidly. Feito com amor por Brandidly</p>
             </div>
@@ -308,8 +318,8 @@
                         <div class="rs-looped rs-wave"  data-speed="12" data-angle="90" data-radius="22px" data-origin="50% 50%">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-small bg-gray-two pinterest-bg-hvr d-flex justify-content-center align-items-center">
-                                    <a class="pinterest-text-hvr" href="javascript:void(0);">
-                                        <i class="fab fa-youtube font-16" aria-hidden="true"></i>
+                                    <a class="pinterest-text-hvr" href="https://vimeo.com/brandidly" target="_blank">
+                                        <i class="fab fa-vimeo font-16" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
@@ -340,7 +350,7 @@
                         <div class="rs-looped rs-wave"  data-speed="12" data-angle="-90" data-radius="22px" data-origin="-50% -50%">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-small bg-pink-two instagram-bg-hvr d-flex justify-content-center align-items-center">
-                                    <a class="instagram-text-hvr" href="javascript:void(0);">
+                                    <a class="instagram-text-hvr" href="https://www.instagram.com/brandid.ly/" target="_blank">
                                         <i class="fab fa-instagram font-16" aria-hidden="true"></i>
                                     </a>
                                 </div>
@@ -404,7 +414,7 @@
                         <div class="rs-looped rs-slideloop"  data-easing="Power0.easeInOut" data-speed="12" data-xs="0" data-xe="0" data-ys="-10" data-ye="60">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-large bg-pink facebook-bg-hvr d-flex justify-content-center align-items-center">
-                                <a class="facebook-text-hvr" href="javascript:void(0);">
+                                <a class="facebook-text-hvr" href="https://facebook.com/brandidlymoz" target="_blank">
                                     <i class="fab fa-facebook-f font-20" aria-hidden="true"></i>
                                 </a>
                                 </div>
@@ -653,9 +663,9 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-red">
-                    <span class="pro-step d-inline-block color-white"><i class="fas fa-marker"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Copywriting</h5>
-                    <p class="font-weight-light color-white">A copywriting é a arte da ciência de elaborar estrategicamente e publicar em linha leitores focalizados ("copy") que podem levar as pessoas a tomar alguma forma de acção.
+                    <span class="pro-step d-inline-block color-white"><i class="fas fa-server"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Infra-estrutura de TI</h5>
+                    <p class="font-weight-light color-white">A infra-estrutura de TI refere-se a todos os componentes que permitem à sua empresa fornecer serviços de tecnologia de informação a todos dentro da organização.
                     <br>
                     <br>
                     <br>
@@ -1032,7 +1042,7 @@
 </section> -->
 <!-- Pricing ends -->
 <section id="contact-us">
-    <iframe width="540" height="1000" src="https://d0f1d444.sibforms.com/serve/MUIEALCz-K64F35D14HXOQt3pKvhpie2kHJ38wO7Op5Hy_OdKsmuXFrQwksh0Y2QQvCQfP5t3U3Vz-tbYP3ij0O49ykS4fw1kzyNG77HVnpxiA6oOIxjfYzzDb3MiDTacFdls_UAVgvja9LFS7DYbaxwuYx1wmgP370ATBqrhaozVLxUBNw9u3H_GVISJs3nW0vagr7f9brPz5W6" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
+    <iframe width="540" height="1000" src="https://d0f1d444.sibforms.com/serve/MUIEAGF-rkyVXU-kR8zIuWU7ELf_ZXNiU8VVCQeXIJK8iFdTXRLkH9Z4sYQjia6s0LzMbtWPwjKE6sdmHp6z3SxFFJMHw4iiAdYA0vyrM-zc97DVglO6uu1tD2UL537bXcRX939zuTOPzL5njNoS99v08xtgJ1dHHzWi7egqtw4KrWBPzDYr91bYYteX6qG5xud2VwbxfLKnYSVb" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
 </section>
 <!-- Clients start -->
 <!-- <section id="clients" class="bg-white p-0 cursor-light no-transition">
@@ -1263,8 +1273,7 @@ Blog ends -->
                         <p class="mb-3">Av. Guerra Popular, 823, Maputo, Mozambique. </p>
 
                         <!--Phone-->
-                        <p class="mb-3"> Telefone do escritório: +258 84 927 6408 <br>
-                            Telemóvel : +258 86 579 6682</p>
+                        <p class="mb-3">Telemóvel : +258 86 579 6682</p>
 
                         <!--Email-->
                         <p class="mb-3"> Email: <a href="mailto:brandid.ly@outlook.com" class="color-black">brandid.ly@outlook.com</a> <br>
@@ -1289,11 +1298,11 @@ Blog ends -->
         <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
                 <ul class="footer-icons mb-4">
-                    <li><a href="javascript:void(0)" class="wow fadeInUp facebook"><i class="fab fa-facebook-f"></i> </a> </li>
+                    <li><a href="https://facebook.com/brandidlymoz" target="_blank" class="wow fadeInUp facebook"><i class="fab fa-facebook-f"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown twitter"><i class="fab fa-twitter"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInUp google"><i class="fab fa-google"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown linkedin"><i class="fab fa-linkedin-in"></i> </a> </li>
-                    <li><a href="javascript:void(0)" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
+                    <li><a href="https://www.instagram.com/brandid.ly/" target="_blank" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
                 </ul>
                 <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Feito com amor por <a href="#">brandidly</a></p>
             </div>
