--- a/index.html
+++ b/index.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Page Title -->
     <title>Brandidly - Creative Agency</title>
-    <meta
+
+
+    <meta property="og:site_name" content="BRANDIDLY - Marketing Agency">
+    <meta property="og:title" content="Brandidly Services - Digital Marketing Agency">
+    <meta property="og:description" content="New Digital agency based in Maputo, Mozambique. We are driven by the passion to bring digital transformation in the evergrowing market of Mozambique. Digital Solutions that can potentially make businesses re-imagine how businesses succeed using digital platforms to increase revenue.">
+
+    <meta property="og:url" content="https://www.brandid.ly/">
+    <meta name="description" content="New Digital agency based in Maputo, Mozambique. We are driven by the passion to bring digital transformation in the evergrowing market of Mozambique. Digital Solutions that can potentially make businesses re-imagine how businesses succeed using digital platforms to increase revenue.">
+
+    <meta name="keywords" content="brandidly, marketing agency mozambique,agencies in maputo, marketing company mozambique, digital marketing mozambique, digital marketing maputo, online marketing, online publicity, social media marketing, Web Design, Website development">
+
+
+
     <!-- Favicon -->
     <link rel="icon" href="creative-studio/img/favicon.png">
     <!-- Bundle -->
@@ -73,7 +85,7 @@
                     <li class="nav-item language"> <a href="index-pt.html" class="nav-link">Pt</a></li>
                 </ul>
             </div>
-            <a href="https://wa.me/00258849276408" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 84 927 6408</a>
+            <a href="https://wa.me/00258865796682" class="btn-setting btn-hvr-up btn-hvr-whatsapp color-black mr-lg-3 d-none d-lg-block"><i class="fab fa-whatsapp"></i> +258 86 579 6682</a>
             <!-- side menu open button -->
             <a class="menu_bars d-inline-block menu-bars-setting animated-wrap sidemenu_toggle d-block d-lg-none">
                 <div class="menu-lines animated-element">
@@ -117,12 +129,20 @@
                     
                     <li class="nav-item"> <a href="#contact" class="scroll nav-link">contact</a></li>
                 </ul>
+                <ul class="navbar-nav flex-lg-row">
+                    <li class="nav-item language"> <a href="index.html" class="nav-link">En</a>
+                    </li>
+
+                    <p>&nbsp;</p>
+
+                    <li class="nav-item language"> <a href="index-pt.html" class="nav-link">Pt</a></li>
+                </ul>
             </nav>
 
             <div class="side-footer text-white w-100">
                 <ul class="social-icons-simple">
-                    <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-facebook-f color-white"></i> </a> </li>
-                    <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-instagram color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="https://facebook.com/brandidlymoz" target="_blank"><i class="fab fa-facebook-f color-white"></i> </a> </li>
+                    <li class="side-menu-icons"><a href="https://www.instagram.com/brandid.ly/" target="_blank"><i class="fab fa-instagram color-white"></i> </a> </li>
                     <li class="side-menu-icons"><a href="javascript:void(0)"><i class="fab fa-twitter color-white"></i> </a> </li>
                 </ul>
                 <p class="text-white">&copy; 2020 Brandidly. Made With Love by Brandidly</p>
@@ -307,8 +327,8 @@
                         <div class="rs-looped rs-wave"  data-speed="12" data-angle="90" data-radius="22px" data-origin="50% 50%">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-small bg-gray-two pinterest-bg-hvr d-flex justify-content-center align-items-center">
-                                    <a class="pinterest-text-hvr" href="javascript:void(0);">
-                                        <i class="fab fa-youtube font-16" aria-hidden="true"></i>
+                                    <a class="pinterest-text-hvr" href="https://vimeo.com/brandidly" target="_blank">
+                                        <i class="fab fa-vimeo font-16" aria-hidden="true"></i>
                                     </a>
                                 </div>
                             </div>
@@ -339,7 +359,7 @@
                         <div class="rs-looped rs-wave"  data-speed="12" data-angle="-90" data-radius="22px" data-origin="-50% -50%">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-small bg-pink-two instagram-bg-hvr d-flex justify-content-center align-items-center">
-                                    <a class="instagram-text-hvr" href="javascript:void(0);">
+                                    <a class="instagram-text-hvr" href="https://www.instagram.com/brandid.ly/" target="_blank">
                                         <i class="fab fa-instagram font-16" aria-hidden="true"></i>
                                     </a>
                                 </div>
@@ -403,7 +423,7 @@
                         <div class="rs-looped rs-slideloop"  data-easing="Power0.easeInOut" data-speed="12" data-xs="0" data-xe="0" data-ys="-10" data-ye="60">
                             <div class="animated-wrap slider-social icon-small">
                                 <div class="animated-element icon-box-large bg-pink facebook-bg-hvr d-flex justify-content-center align-items-center">
-                                <a class="facebook-text-hvr" href="javascript:void(0);">
+                                <a class="facebook-text-hvr" href="https://facebook.com/brandidlymoz" target="_blank">
                                     <i class="fab fa-facebook-f font-20" aria-hidden="true"></i>
                                 </a>
                                 </div>
@@ -647,9 +667,9 @@
         <div class="row">
             <div class="col-lg-4 col-md-6 col-12">
                 <div class="about-box mb-5 mb-lg-0 mx-auto bg-red">
-                    <span class="pro-step d-inline-block color-white"><i class="fas fa-marker"></i></span>
-                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">Copywriting</h5>
-                    <p class="font-weight-light color-white">Copywriting is the art of science of strategically crafting and publishing targeted reader focused ("copy") online that can get people to take some form of action.</p>
+                    <span class="pro-step d-inline-block color-white"><i class="fas fa-server"></i></span>
+                    <h5 class="font-weight-500 color-white mt-25px mb-15px text-capitalize">IT Infrastructure</h5>
+                    <p class="font-weight-light color-white">IT infrastructure refers to all components that enable your company to deliver information technology services to everyone within the organization.</p>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
@@ -1247,8 +1267,7 @@ Blog ends -->
                         <p class="mb-3">Av. Guerra Popular, 823, Maputo, Mozambique. </p>
 
                         <!--Phone-->
-                        <p class="mb-3"> Office Telephone : +258 84 927 6408 <br>
-                            Mobile : +258 86 579 6682</p>
+                        <p class="mb-3">Mobile : +258 86 579 6682</p>
 
                         <!--Email-->
                         <p class="mb-3"> Email: <a href="mailto:brandid.ly@outlook.com" class="color-black">brandid.ly@outlook.com</a> <br>
@@ -1273,11 +1292,11 @@ Blog ends -->
         <div class="row">
             <div class="col-md-12 col-sm-12 text-center">
                 <ul class="footer-icons mb-4">
-                    <li><a href="javascript:void(0)" class="wow fadeInUp facebook"><i class="fab fa-facebook-f"></i> </a> </li>
+                    <li><a href="https://facebook.com/brandidlymoz" target="_blank" class="wow fadeInUp facebook"><i class="fab fa-facebook-f"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown twitter"><i class="fab fa-twitter"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInUp google"><i class="fab fa-google"></i> </a> </li>
                     <li><a href="javascript:void(0)" class="wow fadeInDown linkedin"><i class="fab fa-linkedin-in"></i> </a> </li>
-                    <li><a href="javascript:void(0)" class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
+                    <li><a href="https://www.instagram.com/brandid.ly/" target="_blank"class="wow fadeInUp instagram"><i class="fab fa-instagram"></i> </a> </li>
                 </ul>
                 <p class="copyrights mt-2 mb-2">© 2020 Brandidly. Made with love by <a href="#">brandidly</a></p>
             </div>
